--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-simple-card": "^1.0.11",
     "styled-components": "^3.4.2"
   },
   "scripts": {
